@@ -1,5 +1,11 @@
 2005-12-06  Benoît Dejean  <benoit@placenet.org>
 
+	* src/bacon-message-connection.c:
+
+	Synced with libbacon.
+
+2005-12-06  Benoît Dejean  <benoit@placenet.org>
+
 	* configure.in:
 	* src/procman.c: (procman_data_new):
 	* src/procman.h:
